# Servicio-Al-Cliente-FERREINOX-SAS-BIC

./: .env.example  .gitignore  ARQUITECTURA_MOTOR_BUSQUEDA_FERRO.md  DESPLIEGUE_SERVIDOR_DETALLADO.md  DIAGNOSTICO_ARQUITECTONICO_V3.md  DROPBOX_MAPPING_PLAN.txt  EXTRACCION_WEB_FERREINOX_PINTUCO.md  GUIA_COOLIFY_CRM_FERREINOX.md  GUIA_RENOMBRE_FICHAS_RAG_INVENTARIO.md  NOMBRES MONTANA COLORS.xlsx  PINTUCO_PUBLICO_NO_CONTAMINAR_RAG.md  POSTGRES_ESTRUCTURA_LIMPIA.txt  Procfile  README.md  REPORTE_SESION_2026-04-10.md  RESULTADO_BATERIA_MATRIZ_GLOBAL_200.md  RESULTADO_BATERIA_MULTI_SUPERFICIE_Y_CONTRADICCIONES.md  RESULTADO_BATERIA_PREPARACION_PRIORIDAD_NEGACION_DOBLE_CONTRADICCION.md  SETUP_PGVECTOR_COOLIFY.sql  SUPER_AGENTE_SERVICIO_CLIENTE_PLAN.md  Watsap_Bot.py  _apply_canon_from_csv.py  _apply_inventario_activo.py  _audit_full_rag.py  _audit_rag_diagnostic.py  _audit_results.json  _check_schema.py  _count_guides.py  _diag_inventory_by_desc.py  _diag_inventory_movement.py  _diag_prices.py  _diag_rag_docs.py  _diag_rag_fachada.py  _diag_rag_live.py  _diag_ref_format.py  _diag_scoring.py  _enrich_guides.py  _explore_abracol.py  _gen_validacion_canon.py  _inspect_ventas.py  (+84 more)
.streamlit/: secrets.example.toml
artifacts/: PROMPT_MAESTRO_EXCEL_AGENTE.md  Plantilla_Agente_Catalogo_Ferreinox.xlsx  Plantilla_Agente_Catalogo_Ferreinox_v2.xlsx  Plantilla_Agente_Catalogo_Ferreinox_v3_semillas.xlsx  SEMILLAS_ALTA_CONFIANZA_V4.py  SYSTEM_PROMPT_NLU_EXTRACCION_PRODUCTO.md
backend/: Dockerfile  agent_context.py  agent_profiles.py  agent_prompt_customer.py  agent_prompt_ferreamigo.py  agent_prompt_internal.py  agent_prompt_v3.py  agent_response_sanitizer.py  agent_schema.sql  agent_v3.py  apply_manual_catalog_seeds.py  apply_postgrest_views.py  articulos_maestro_setup.sql  audit_rag_corpus.py  audit_technical_profiles.py  auth_internal.py  bi_handlers.py  bicomponents.py  bootstrap_database.py  cargar_datos.py  customer_handlers.py  db_diagnostics.py  enrich_solution_guides_from_rag.py  gemini_embeddings.py  idempotency.py  import_abracol_catalog.py  import_articulos_maestro.py  (+35 more)
(+362 files in other folders)
