[tool.poetry]
name = "ferreinox-bot"
version = "0.1.0"
description = "WhatsApp Bot for Ferreinox, including CRM and Business Intelligence features."
authors = ["Diego Mao"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "*"
gunicorn = "*"
requests = "*"
google-generativeai = "*"
# Para Google Sheets API
gspread = "*"
# Para autenticaci칩n de Google Sheets
google-auth = "*"
# Para el procesamiento y an치lisis de la cartera (como en Streamlit)
pandas = "*"
# Para la carga de datos de cartera desde Dropbox
dropbox = "*"
# No se incluy칩 yagmail ni openpyxl, ya que el c칩digo de Flask no requiere su uso directo en el runtime principal.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
