[tool.poetry]
name = "ferreinox-bot-ia"
version = "0.1.0"
description = "Bot de servicio al cliente (CRM AI) para Ferreinox SAS BIC"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
package-mode = false # <-- ¡Correcto! Esto optimiza el despliegue

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "*"
gunicorn = "*"
requests = "*"
google-generativeai = "*"
gspread = "*"
google-auth = "*"
pandas = "*"
dropbox = "*"
openpyxl = "*" # <-- ¡AQUÍ ESTÁ LA LIBRERÍA QUE FALTABA!

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
